@@ -1,3 +1,8 @@
+2012-04-24  Richard Guenther  <rguenther@suse.de>
+
+	PR tree-optimization/53085
+	* g++.dg/torture/pr53085.C: New testcase.
+
 2012-04-23  Richard Guenther  <rguenther@suse.de>
 
 	PR c/53060
